@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.16-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-16 19:15:59, took 00:13:07, with 50 workers, on 4112 cases, 1 failed, 0 traces, 10 retries<br/>
+tested: 2025-12-16 19:43:03, took 00:12:41, with 50 workers, on 4112 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3937,7 +3937,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp31.tst">rout-pvrp31.tst</a></td><td>success</td><td>pvrp default address suppression</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp32.tst">rout-pvrp32.tst</a></td><td>success</td><td>pvrp address unsuppression</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp33.tst">rout-pvrp33.tst</a></td><td>success</td><td>pvrp with php labels</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp34.tst">rout-pvrp34.tst</a></td><td>#6-run-r2 tping 100 10 2.2.2.1 vrf v1 sou lo0</td><td>ingress label filtering with pvrp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp34.tst">rout-pvrp34.tst</a></td><td>success</td><td>ingress label filtering with pvrp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp35.tst">rout-pvrp35.tst</a></td><td>success</td><td>egress label filtering with pvrp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp36.tst">rout-pvrp36.tst</a></td><td>success</td><td>pvrp stub node</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-pvrp37.tst">rout-pvrp37.tst</a></td><td>success</td><td>pvrp stub interface</td></tr>
